Quick (hopefully) fix for horizontal scrolling on mobile

--- a/styles.css
+++ b/styles.css
@@ -109,6 +109,7 @@ body {
     writing-mode: sideways-lr;
     position: absolute;
     right: 0;
+    overflow: hidden;
   }
 
   .social-icons {
